--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<h1>Welcome to {{title}}</h1>
-<h2>{{name}}</h2>
+<div class="mainnavbar">  
+  <nav class="navbar navbar-success bg-success">
+    <img src="./assets/images/agro-white.png" alt="agro-white.png" width="150px">
+    <h1>{{title}}</h1>
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </nav>
+</div>
+  
+<router-outlet></router-outlet>
