Create cover images section

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,13 @@
 .mainnavbar h1{
     color: white;
     font-size: xx-large;
+    margin-left: 50px;
 }
 .mainnavbar img{
     margin-top: -12px;
     margin-bottom: -20px;
     margin-left: -15px;
+}
+.navbar{
+    margin-bottom: 10px;
 }
