--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.mainnavbar h1{
+    color: white;
+    font-size: xx-large;
+}
+.mainnavbar img{
+    margin-top: -12px;
+    margin-bottom: -20px;
+    margin-left: -15px;
+}
