--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,3 +11,16 @@
 .navbar{
     margin-bottom: 10px;
 }
+
+.footer{
+    background-color: #292929;
+    color: azure;
+}
+
+.footer-copyright{
+    border-top: 1px solid white;
+}
+
+.footer img{
+    margin-left: 15px;
+}
