--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,110 @@
 </div>
   
 <router-outlet></router-outlet>
+
+<div class="footer">
+  <!-- Footer -->
+<footer class="text-center text-lg-start">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 link-grayish">
+        <i class="fab fa-facebook-f"><img src="./assets/images/facebook.png" alt="facebook.png" width="40px"></i>
+      </a>
+      <a href="" class="me-4 link-grayish">
+        <i class="fab fa-twitter"><img src="./assets/images/twitter.png" alt="twitter.png" width="40px"></i>
+      </a>
+      <a href="" class="me-4 link-grayish">
+        <i class="fab fa-instagram"><img src="./assets/images/instagram.png" alt="instagram.png" width="40px"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h5 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3 text-grayish"></i>Description
+          </h5>
+          <p>
+            This is a program carried out by the Ministry of Agriculture in collaboration with Keells to bring value to the produce of farmers islandwide.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h5 class="text-uppercase fw-bold mb-4">
+            Parthners
+          </h5>
+            <p href="#!" class="text-reset">Ministry of Agriculture</p>
+            <p href="#!" class="text-reset">Keels Super</p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h5 class="text-uppercase fw-bold mb-4">
+            Useful links
+          </h5>
+          <p>
+            <a href="#!" class="text-reset">Ministry of Agriculture</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Keels Super Online</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Keels on Facebook</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Register for Farmers</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h5 class="text-uppercase fw-bold mb-4">Contact</h5>
+          <p><i class="fas fa-home me-3 text-grayish"></i>No 15/2, Perera Road, Colombo</p>
+          <p>
+            <i class="fas fa-envelope me-3 text-grayish"></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3 text-grayish"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3 text-grayish"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+<div class="footer-copyright">
+    <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Keels with Ministry of Agriculture</a>
+  </div>
+  <!-- Copyright -->
+</div>
+  
+</footer>
+<!-- Footer -->
+</div>
