--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,4 +20,10 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+      
+      <div class="home-content">
+          <!-- code -->
+          <h1>Home Content</h1>
+      </div>
+
 </div>
